# USBDescriptorCompiler

./: AGENTS.md  README.md  UAC2_DESCRIPTOR_CATALOG.txt  pyproject.toml  usb3.2_descriptor_tables.md
tests/: test_cdc.py  test_composite.py  test_core_base.py  test_core_types.py  test_export.py  test_hid.py  test_hid_report.py  test_high_speed.py  test_standard.py  test_topology.py  test_uac1.py  test_uac2.py  test_webusb.py
usbdesc/: __init__.py  topology.py
usbdesc/composite/: __init__.py  allocator.py  audio_uac1.py  audio_uac2.py  builder.py  cdc.py  hid.py  midi.py  msc.py
usbdesc/core/: __init__.py  base.py  encoder.py  types.py
usbdesc/device_class/: __init__.py  cdc.py  hid.py  hid_report.py  webusb.py
usbdesc/device_class/audio/: __init__.py  uac1.py  uac2.py
usbdesc/examples/: __init__.py  hid_report_builder.py  high_speed_uac2.py  line_in_out.py  midi_audio_composite.py  midi_hid_composite.py  midi_independent.py  midi_multi_port.py  midi_simple.py  multi_audio_path.py  multi_function_device.py  simple_uac2_speaker.py  topology_demo.py  uac1_headset.py  webusb_device.py
usbdesc/export/: __init__.py  c_array.py  json_.py  python_bytes.py
usbdesc/standard/: __init__.py  config.py  device.py  endpoint.py  iad.py  interface.py  qualifier.py  string.py
